Mise en page blocks menus

--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
     </header>
 
     <main class="accueil">
+      <div class="block">
         <div class="accueil-menu-1">
           <a href="menus/la_note_enchantee.html"></section>
             <div class="link">
-              <i class="fas fa-music"></i>
+              <i class="fas fa-music icone"></i>
               <h2>La note enchantée</h2>
               <p>Menu</p>
             </div>
@@ -46,6 +47,7 @@
             </div>
           </a>
         </div>
+      </div>
         <div class="btn">
           <button class="prochainement">Prochainement <span class="dot1"> .</span><span class="dot2"> .</span><span class="dot3"> .</span></button>
         </div>    
