--- a/menus/la_note_enchantee.html
+++ b/menus/la_note_enchantee.html
@@ -5,6 +5,7 @@
     <title>ohmyfood/menu La Note Enchantée</title>
     <link rel="stylesheet" href="../css/style.css">
     <script src="script.js"></script>
+    <script src="https://kit.fontawesome.com/845f360e8f.js" crossorigin="anonymous"></script>
   </head>
 
   <body>
