--- a/menus/mentions_legales.html
+++ b/menus/mentions_legales.html
@@ -12,7 +12,7 @@
             <a href="../index.html"><h1>ohmyfood</h1></a>
         </header>
 
-        <main>
+        <main class="mentions_legales">
             <h2 class="maj">mentions légales</h2>
             <p>Conformément aux dispositions des Articles 6-III et 19 de la Loi n°2004-575 du 21 juin 2004 pour la Confiance dans l’économie numérique, 
             dite L.C.E.N., il est porté à la connaissance des Utilisateurs du site ohmyfood.com les présentes mentions légales. La connexion et la navigation 
@@ -20,10 +20,10 @@
             accessibles sur le site à la rubrique « Mentions légales ».</p>
             <h3 class="maj">article 1 : l'éditeur</h3>
             <p>L'édition du site ohmyfood.com est assurée par la Société SARL OHMYFOOD au capital de 1.000 euros, immatriculée au RCS de Paris 
-            sous le numéro 123456789 dont le siège social est situé 10 avenue de la Joie 75009 Paris<br>
-            numéro de téléphone 0100000000<br>
-            adresse e-mail : bonjour@ohmyfood.com<br>
-            N° de TVA intracommunautaire : FR123456789<br> 
+            sous le numéro 123456789 dont le siège social est situé 10 avenue de la Joie 75009 Paris
+            , numéro de téléphone 0100000000
+            , adresse e-mail : bonjour@ohmyfood.com
+            , N° de TVA intracommunautaire : FR123456789. 
             Le Directeur de la publication est Pierre Paul Jacques d'Openclassrooms
             </p>
             <h3 class="maj">article 2 : l'hébergeur</h3>
