Mise en page des pages menus

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="accueil-menu-1">
           <a href="menus/la_note_enchantee.html"></section>
             <div class="link">
-              <i class="fas fa-music icone"></i>
+              <img src="./images/note_small.png" alt=""/>
               <h2>La note enchantée</h2>
               <p>Menu</p>
             </div>
