--- a/menus/le_chic_a_la_francaise.html
+++ b/menus/le_chic_a_la_francaise.html
@@ -4,7 +4,6 @@
     <meta charset="utf-8">
     <title>ohmyfood/menu Le Chic à la Française</title>
     <link rel="stylesheet" href="../css/style.css">
-    <script src="script.js"></script>
   </head>
 
   <body>
@@ -12,59 +11,68 @@
           <a href="../index.html"><h1>ohmyfood</h1></a>
         </header>
 
-        <main>
-          <section class="section__header--variation2">
+        <main class="menu-2-2">
+          <section class="section__header-2">
             <h3>Le chic à la française</h3>
           </section>
-          <section class="section__menu--variation2" id="entrée2">
-            <div class="bloc__title2">
+          <section>
+            <div class="block__title-2-1">
               <img src="../images/trait_menu2_1.PNG" alt="" />
               <h4>Pour se mettre en appétit</h4>
               <img src="../images/trait_menu2_2.PNG" alt="" />
             </div>
-            <div class="bloc__dishes2">
-              <p>Tartare de poulpe acidulé aux zests d'orange<span>79€</span></p>
-              <p>Velouté de Légumes d'antan<span>57€</span></p>
-              <p>Soupe à l'oignon revisitée<span>57€</span></p>
+            <div class="block__meals-1">
+              <div class="block__meals-line">
+                <div>Tartare de poulpe acidulé aux zests d'orange</div>
+                <div>79€</div>
+              </div>
+              <div class="block__meals-line">
+                <div>Velouté de Légumes d'antan</div>
+                <div>57€</div>
+              </div>
+              <div class="block__meals-line">
+                <div>Soupe à l'oignon revisitée</div>
+                <div>57€</div>
+              </div>
             </div>
           </section>
-          <section class="section__menu--variation2" id="plat2">
-            <div class="bloc__title2">
+          <section>
+            <div class="block__title-2-2">
               <img src="../images/trait_menu2_3.PNG" alt="" />
               <h4>Plaisir des papilles</h4>
               <img src="../images/trait_menu2_4.PNG" alt="" />
             </div>
-            <div class="bloc__dishes2">
-              <p>
-                Coquilles Saint-Jacques accompagnées d'une purée de panais<span
-                  >95€</span
-                >
-              </p>
-              <p>
-                Magret de canard et parmentier de pommes de terres<span>88€</span>
-              </p>
-              <p>
-                Pigeonneau d'Ille et Vilaine sur son lit de gnocchis aux
-                légumes<span>175€</span>
-              </p>
+            <div class="block__meals-2-2">
+              <div class="block__meals-line">
+                <div>Coquilles Saint-Jacques accompagnées d'une purée de panais</div>
+                <div>95€</div>
+              </div>
+              <div class="block__meals-line">
+                <div>Magret de canard et parmentier de pommes de terres</div>
+                <div>88€</div>
+              </div>
+              <div class="block__meals-line">
+                <div>Pigeonneau d'Ille et Vilaine sur son lit de gnocchis aux légumes</div>
+                <div>175€</div>
+              </div>
             </div>
           </section>
-          <section class="section__menu--variation2" id="dessert2">
-            <div class="bloc__title2">
+          <section>
+            <div class="block__title-2-3">
               <img src="../images/trait_menu2_5.PNG" alt="" />
               <h4>Gourmandises sucrées</h4>
               <img src="../images/trait_menu2_6.PNG" alt="" />
             </div>
-            <div class="bloc__dishes2">
-              <p>
-                Pétales de violettes glacés et purée de noisettes
-              </p>
-              <p>
-                Fondant au chocolat revisité
-              </p>
-              <p>
-                Millefeuille croustillant
-              </p>
+            <div class="block__meals-2-3">
+              <div class="block__meals-line">
+                <div>Pétales de violettes glacés et purée de noisettes</div>
+              </div>
+              <div class="block__meals-line">
+                <div>Fondant au chocolat revisité</div>
+              </div>
+              <div class="block__meals-line">
+                <div>Millefeuille croustillant</div>
+              </div>
             </div>
           </section>
         </main>
