--- a/menus/la_palette_du_gout.html
+++ b/menus/la_palette_du_gout.html
@@ -5,6 +5,7 @@
     <title>ohmyfood/menu La Palette du Goût</title>
     <link rel="stylesheet" href="../css/style.css">
     <script src="script.js"></script>
+    <script src="https://kit.fontawesome.com/845f360e8f.js" crossorigin="anonymous"></script>
   </head>
 
   <body>
@@ -12,65 +13,71 @@
             <a href="../index.html"><h1>ohmyfood</h1></a>
         </header>
 
-        <main>
-          <section class="section__header--variation4">
+        <main class="menu-4-4">
+          <section class="section__header-4">
             <h3>La palette du goût</h3>
           </section>
-          <section class="section__menu--variation4">
-            <div class="bloc__title">
+          <section>
+            <div class="block__title-4-1">
               <img src="../images/trait_menu4_1.PNG" alt="" />
               <h4>Esquisse</h4>
               <img src="../images/trait_menu4_2.PNG" alt="" />
             </div>
-            <div class="bloc__dishes">
-              <p>Fricassée d'escargot au piment d'espelette<span>60€</span></p>
-              <p>
-                Oeuf au plat assaisonné à la truffe sur lit de caviar<span
-                  >55€</span
-                >
-              </p>
-              <p>
-                Foie gras de canard mi-cuit et ses copeaux de truffe noire<span
-                  >65€</span
-                >
-              </p>
+            <div class="block__meals">
+              <div class="block__meals-line-4">
+                <div>Fricassée d'escargot au piment d'espelette</div>
+                <div>60€</div>
+              </div>
+              <div class="block__meals-line-4">
+                <div>Oeuf au plat assaisonné à la truffe sur lit de caviar</div>
+                <div>55€</div>
+              </div>
+              <div class="block__meals-line-4">
+                <div>Foie gras de canard mi-cuit et ses copeaux de truffe noire</div>
+                <div>65€</div>
+              </div>
             </div>
           </section>
-          <section class="section__menu--variation4">
-            <div class="bloc__title">
+          <section>
+            <div class="block__title-4-2">
               <img src="../images/trait_menu4_1.PNG" alt="" />
               <h4>Oeuvre de maitre</h4>
               <img src="../images/trait_menu4_2.PNG" alt="" />
             </div>
-            <div class="bloc__dishes">
-              <p>
-                Filet de boeuf aux herbes accompagné de sa ribambelle de
-                légumes<span>70€</span>
-              </p>
-              <p>
-                Parmentier de queue de boeuf à la truffe noire sur sa purée de
-                panais<span>85€</span>
-              </p>
-              <p>Filet de Turbot aux agrumes<span>125€</span></p>
+            <div class="block__meals">
+              <div class="block__meals-line-4">
+                <div>Filet de boeuf aux herbes accompagné de sa ribambelle de légumes</div>
+                <div>70€</div>
+              </div>
+              <div class="block__meals-line-4">
+                <div>Parmentier de queue de boeuf à la truffe noire sur sa purée de panais</div>
+                <div>85€</div>
+              </div>
+              <div class="block__meals-line-4">
+                <div>Filet de Turbot aux agrumes</div>
+                <div>125€</div>
+              </div>
             </div>
           </section>
-          <section class="section__menu--variation4">
-            <div class="bloc__title">
+          <section>
+            <div class="block__title-4-3">
               <img src="../images/trait_menu4_1.PNG" alt="" />
               <h4>Au sommet de l'art</h4>
               <img src="../images/trait_menu4_2.PNG" alt="" />
             </div>
-            <div class="bloc__dishes">
-              <p>Paris-Brest revisité<span>55€</span></p>
-              <p>
-                Macaron au chocolat d'exception et glace à la vanille de
-                Madagascar<span>65€</span>
-              </p>
-              <p>
-                Mousse au chocolat au piment d'espelette et à la truffe noire<span
-                  >60€</span
-                >
-              </p>
+            <div class="block__meals">
+              <div class="block__meals-line-4">
+                <div>Paris-Brest revisité</div>
+                <div>55€</div>
+              </div>
+              <div class="block__meals-line-4">
+                <div>Macaron au chocolat d'exception et glace à la vanille de Madagascar</div>
+                <div>65€</div>
+              </div>
+              <div class="block__meals-line-4">
+                <div>Mousse au chocolat au piment d'espelette et à la truffe noire</div>
+                <div>60€</div>
+              </div>
             </div>
           </section>
         </main>
