--- a/menus/le_delice_des_papilles.html
+++ b/menus/le_delice_des_papilles.html
@@ -11,51 +11,71 @@
           <a href="../index.html"><h1>ohmyfood</h1></a>
         </header>
 
-        <main>
-          <section class="section__header--variation3">
+        <main class="menu-3">
+          <section class="section__header-3">
             <h3>Le délice des papilles</h3>
           </section>
-          <section class="section__menu--variation3">
-            <div class="bloc__title">
+          <section>
+            <div class="block__title-3-1">
               <img src="../images/trait_menu3_1.PNG" alt="" />
               <h4>Pour bien commencer</h4>
               <img src="../images/trait_menu3_2.PNG" alt="" />
             </div>
-            <div class="bloc__dishes">
-              <p>Tartare de thon assaisonné au yuzu<span>55€</span></p>
-              <p>
-                Bouchée de homard croustillant et sa farandole de petits
-                légumes<span>89€</span>
-              </p>
-              <p>Velouté de cèpes aux truffes<span>56€</span></p>
+            <div class="block__meals">
+              <div class="block__meals-line">
+                <div>Tartare de thon assaisonné au yuzu</div>
+                <div>55€</div>
+              </div>
+              <div class="block__meals-line">
+                <div>Bouchée de homard croustillant et sa farandole de petits légumes</div>
+                <div>89€</div>
+              </div>
+              <div class="block__meals-line">
+                <div>Velouté de cèpes aux truffes</div>
+                <div>56€</div>
+              </div>
             </div>
           </section>
-          <section class="section__menu--variation3">
-            <div class="bloc__title">
+          <section>
+            <div class="block__title-3-2">
               <img src="../images/trait_menu3_3.PNG" alt="" />
               <h4>Pour bien continuer</h4>
               <img src="../images/trait_menu3_4.PNG" alt="" />
             </div>
-            <div class="bloc__dishes">
-              <p>
-                Poulet rôti aux herbes de provence et sa crème de truffe<span
-                  >110€</span
-                >
-              </p>
-              <p>Langouste rôtie et ses légumes maison<span>225€</span></p>
-              <p>Côte de boeuf angus et sa purée de panais<span>115€</span></p>
+            <div class="block__meals">
+              <div class="block__meals-line">
+                <div>Poulet rôti aux herbes de provence et sa crème de truffe</div>
+                <div>110€</div>
+              </div>
+              <div class="block__meals-line">
+                <div>Langouste rôtie et ses légumes maison</div>
+                <div>225€</div>
+              </div>
+              <div class="block__meals-line">
+                <div>Côte de boeuf angus et sa purée de panais</div>
+                <div>115€</div>
+              </div>
             </div>
           </section>
-          <section class="section__menu--variation3">
-            <div class="bloc__title">
+          <section>
+            <div class="block__title-3-3">
               <img src="../images/trait_menu3_5.PNG" alt="" />
               <h4>Pour bien terminer</h4>
               <img src="../images/trait_menu3_6.PNG" alt="" />
             </div>
-            <div class="bloc__dishes">
-              <p>Farandole de dessert du chef<span>55€</span></p>
-              <p>Crème brulée revisitée<span>60€</span></p>
-              <p>Tiramisu à la noisette<span>55€</span></p>
+            <div class="block__meals">
+              <div class="block__meals-line">
+                <div>Farandole de dessert du chef</div>
+                <div>55€</div>
+              </div>
+              <div class="block__meals-line">
+                <div>Crème brulée revisitée</div>
+                <div>60€</div>
+              </div>
+              <div class="block__meals-line">
+                <div>Tiramisu à la noisette</div>
+                <div>55€</div>
+              </div>
             </div>
           </section>
         </main>
