--- a/menus/mentions_legales.html
+++ b/menus/mentions_legales.html
@@ -13,12 +13,12 @@
         </header>
 
         <main class="mentions_legales">
-            <h2 class="maj">mentions légales</h2>
+            <h2 class="mentions_legales-h2">mentions légales</h2>
             <p>Conformément aux dispositions des Articles 6-III et 19 de la Loi n°2004-575 du 21 juin 2004 pour la Confiance dans l’économie numérique, 
             dite L.C.E.N., il est porté à la connaissance des Utilisateurs du site ohmyfood.com les présentes mentions légales. La connexion et la navigation 
             sur le site "OHMYFOOD" par l’Utilisateur implique acceptation intégrale et sans réserve des présentes mentions légales. Ces dernières sont 
             accessibles sur le site à la rubrique « Mentions légales ».</p>
-            <h3 class="maj">article 1 : l'éditeur</h3>
+            <h3>article 1 : l'éditeur</h3>
             <p>L'édition du site ohmyfood.com est assurée par la Société SARL OHMYFOOD au capital de 1.000 euros, immatriculée au RCS de Paris 
             sous le numéro 123456789 dont le siège social est situé 10 avenue de la Joie 75009 Paris
             , numéro de téléphone 0100000000
@@ -26,21 +26,21 @@
             , N° de TVA intracommunautaire : FR123456789. 
             Le Directeur de la publication est Pierre Paul Jacques d'Openclassrooms
             </p>
-            <h3 class="maj">article 2 : l'hébergeur</h3>
+            <h3>article 2 : l'hébergeur</h3>
             <p>L'hébergeur du site ohmyfood.com est la Société Github, dont le siège social est situé 88 Colin P Kelly Jr St, San Francisco, CA, 94107, 
             États-Unis avec le numéro de téléphone : +1 877-448-4820</p>
-            <h3 class="maj">article 3 : accès au site</h3>
+            <h3>article 3 : accès au site</h3>
             <p>Le site est accessible par tout endroit, 7j/7, 24h/24 sauf cas de force majeure, interruption programmée ou non et pouvant découlant d’une 
             nécessité de maintenance. En cas de modification, interruption ou suspension des services le site OHMYFOOD.com ne saurait être tenu responsable.</p>
-            <h3 class="maj">article 4 : collecte des données</h3>
+            <h3>article 4 : collecte des données</h3>
             <p>Le site est exempté de déclaration à la Commission Nationale Informatique et Libertés (CNIL) dans la mesure où il ne collecte aucune donnée 
             concernant les utilisateurs. Nous vous invitons à consulter le site du <a href="https://www.cnil.fr/" target="_blank">CNIL</a></p>
-            <h3 class="maj">article 5: cookies</h3>
+            <h3>article 5: cookies</h3>
             <p>L’Utilisateur est informé que lors de ses visites sur le site, un cookie peut s’installer automatiquement sur son logiciel de navigation. 
             En naviguant sur le site, il les accepte. Un cookie est un élément qui ne permet pas d’identifier l’Utilisateur mais sert à enregistrer 
             des informations relatives à la navigation de celui-ci sur le site Internet. L’Utilisateur pourra désactiver ce cookie par l’intermédiaire 
             des paramètres figurant au sein de son logiciel de navigation.</p>
-            <h3 class="maj">article 6 : propriété intellectuelle</h3>
+            <h3>article 6 : propriété intellectuelle</h3>
             <p>Toute utilisation, reproduction, diffusion, commercialisation, modification de toute ou partie du site ohmyfood.com, sans autorisation 
             de l’Éditeur est prohibée et pourra entraînée des actions et poursuites judiciaires telles que notamment prévues par le Code de la propriété 
             intellectuelle et le Code civil. Pour plus d’informations, se reporter aux CGU du site ohmyfood.com accessible à la rubrique « CGU ».</p>
