Ajout du favicon

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Ohmyfood</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="shortcut icon" type="image/png" href="images/favicon_ocp3.png"/>
     <script src="https://kit.fontawesome.com/845f360e8f.js" crossorigin="anonymous"></script>
   </head>
   
