--- a/menus/mentions_legales.html
+++ b/menus/mentions_legales.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Mentions Légales</title>
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="shortcut icon" type="image/png" href="images/favicon_ocp3.png"/>
   </head>
 
   <body>
