Passé PNG en png

--- a/menus/la_palette_du_gout.html
+++ b/menus/la_palette_du_gout.html
@@ -18,9 +18,9 @@
           </section>
           <section>
             <div class="block__title-4-1">
-              <img src="../images/trait_menu4_1.PNG" alt="" />
+              <img src="../images/trait_menu4_1.png" alt="" />
               <h4>Esquisse</h4>
-              <img src="../images/trait_menu4_2.PNG" alt="" />
+              <img src="../images/trait_menu4_2.png" alt="" />
             </div>
             <div class="block__meals">
               <div class="block__meals-line-4">
@@ -39,9 +39,9 @@
           </section>
           <section>
             <div class="block__title-4-2">
-              <img src="../images/trait_menu4_1.PNG" alt="" />
+              <img src="../images/trait_menu4_1.png" alt="" />
               <h4>Oeuvre de maitre</h4>
-              <img src="../images/trait_menu4_2.PNG" alt="" />
+              <img src="../images/trait_menu4_2.png" alt="" />
             </div>
             <div class="block__meals">
               <div class="block__meals-line-4">
@@ -60,9 +60,9 @@
           </section>
           <section>
             <div class="block__title-4-3">
-              <img src="../images/trait_menu4_1.PNG" alt="" />
+              <img src="../images/trait_menu4_1.png" alt="" />
               <h4>Au sommet de l'art</h4>
-              <img src="../images/trait_menu4_2.PNG" alt="" />
+              <img src="../images/trait_menu4_2.png" alt="" />
             </div>
             <div class="block__meals">
               <div class="block__meals-line-4">
