--- a/menus/le_chic_a_la_francaise.html
+++ b/menus/le_chic_a_la_francaise.html
@@ -18,9 +18,9 @@
           </section>
           <section>
             <div class="block__title-2-1">
-              <img src="../images/trait_menu2_1.PNG" alt="" />
+              <img src="../images/trait_menu2_1.png" alt="" />
               <h4>Pour se mettre en appétit</h4>
-              <img src="../images/trait_menu2_2.PNG" alt="" />
+              <img src="../images/trait_menu2_2.png" alt="" />
             </div>
             <div class="block__meals-1">
               <div class="block__meals-line">
@@ -39,9 +39,9 @@
           </section>
           <section>
             <div class="block__title-2-2">
-              <img src="../images/trait_menu2_3.PNG" alt="" />
+              <img src="../images/trait_menu2_3.png" alt="" />
               <h4>Plaisir des papilles</h4>
-              <img src="../images/trait_menu2_4.PNG" alt="" />
+              <img src="../images/trait_menu2_4.png" alt="" />
             </div>
             <div class="block__meals-2-2">
               <div class="block__meals-line">
@@ -60,9 +60,9 @@
           </section>
           <section>
             <div class="block__title-2-3">
-              <img src="../images/trait_menu2_5.PNG" alt="" />
+              <img src="../images/trait_menu2_5.png" alt="" />
               <h4>Gourmandises sucrées</h4>
-              <img src="../images/trait_menu2_6.PNG" alt="" />
+              <img src="../images/trait_menu2_6.png" alt="" />
             </div>
             <div class="block__meals-2-3">
               <div class="block__meals-line">
