Ajout favicon sur toutes les pages

--- a/menus/le_delice_des_papilles.html
+++ b/menus/le_delice_des_papilles.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>ohmyfood/menu Le Délice des Papilles</title>
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="shortcut icon" type="image/png" href="images/favicon_ocp3.png"/>
+    <link rel="shortcut icon" type="image/png" href="../images/favicon_ocp3.png"/>
   </head>
   <body>
         <header>
@@ -17,9 +17,9 @@
           </section>
           <section>
             <div class="block__title-3-1">
-              <img src="../images/trait_menu3_1.PNG" alt="" />
+              <img src="../images/trait_menu3_1.png" alt="" />
               <h4>Pour bien commencer</h4>
-              <img src="../images/trait_menu3_2.PNG" alt="" />
+              <img src="../images/trait_menu3_2.png" alt="" />
             </div>
             <div class="block__meals">
               <div class="block__meals-line">
@@ -38,9 +38,9 @@
           </section>
           <section>
             <div class="block__title-3-2">
-              <img src="../images/trait_menu3_3.PNG" alt="" />
+              <img src="../images/trait_menu3_3.png" alt="" />
               <h4>Pour bien continuer</h4>
-              <img src="../images/trait_menu3_4.PNG" alt="" />
+              <img src="../images/trait_menu3_4.png" alt="" />
             </div>
             <div class="block__meals">
               <div class="block__meals-line">
@@ -59,9 +59,9 @@
           </section>
           <section>
             <div class="block__title-3-3">
-              <img src="../images/trait_menu3_5.PNG" alt="" />
+              <img src="../images/trait_menu3_5.png" alt="" />
               <h4>Pour bien terminer</h4>
-              <img src="../images/trait_menu3_6.PNG" alt="" />
+              <img src="../images/trait_menu3_6.png" alt="" />
             </div>
             <div class="block__meals">
               <div class="block__meals-line">
