--- a/menus/la_palette_du_gout.html
+++ b/menus/la_palette_du_gout.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>ohmyfood/menu La Palette du Goût</title>
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="shortcut icon" type="image/png" href="images/favicon_ocp3.png"/>
+    <link rel="shortcut icon" type="image/png" href="../images/favicon_ocp3.png"/>
   </head>
 
   <body>
