Correction du lein vers la page mentions legales

--- a/menus/la_note_enchantee.html
+++ b/menus/la_note_enchantee.html
@@ -90,7 +90,7 @@
         </main>
 
         <footer>
-            <a href="html/mentions_legales.html">Mentions légales</a>
+            <a href="menus/mentions_legales.html">Mentions légales</a>
             <a href="mailto:bunel.h85@gmail.com" target="_blank">Contactez-nous</a>
         </footer>
 
