--- a/menus/la_palette_du_gout.html
+++ b/menus/la_palette_du_gout.html
@@ -82,7 +82,7 @@
         </main>
 
         <footer>
-            <a href="html/mentions_legales.html">Mentions légales</a>
+            <a href="menus/mentions_legales.html">Mentions légales</a>
             <a href="mailto:bunel.h85@gmail.com" target="_blank">Contactez-nous</a>
         </footer>
 
