--- a/menus/le_chic_a_la_francaise.html
+++ b/menus/le_chic_a_la_francaise.html
@@ -79,7 +79,7 @@
         </main>
 
         <footer>
-            <a href="html/mentions_legales.html">Mentions légales</a>
+            <a href="menus/mentions_legales.html">Mentions légales</a>
             <a href="mailto:bunel.h85@gmail.com" target="_blank">Contactez-nous</a>
         </footer>
 
