Ajout metadonnées pour media queries dans les fichiers html

--- a/menus/le_delice_des_papilles.html
+++ b/menus/le_delice_des_papilles.html
@@ -2,6 +2,7 @@
 <html lang="fr">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ohmyfood/menu Le Délice des Papilles</title>
     <link rel="stylesheet" href="../css/style.css">
     <link rel="shortcut icon" type="image/png" href="../images/favicon_ocp3.png"/>
@@ -81,7 +82,7 @@
         </main>
 
         <footer>
-            <a href="menus/mentions_legales.html">Mentions légales</a>
+            <a href="../menus/mentions_legales.html">Mentions légales</a>
             <a href="mailto:bunel.h85@gmail.com" target="_blank">Contactez-nous</a>
         </footer>
 
