--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ohmyfood</title>
-    <link rel="stylesheet" href="./css/prefixed/style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <link rel="shortcut icon" type="image/png" href="images/favicon_ocp3.png"/>
     <script src="https://kit.fontawesome.com/845f360e8f.js" crossorigin="anonymous"></script>
   </head>
