--- a/menus/la_note_enchantee.html
+++ b/menus/la_note_enchantee.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ohmyfood/menu La Note Enchantée</title>
-    <link rel="stylesheet" href="../css/prefixed/style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <link rel="shortcut icon" type="image/png" href="../images/favicon_ocp3.png"/>
   </head>
 
@@ -27,19 +27,19 @@
             <div class="block__meals">
               <div class="block__meals-line">
                 <div>Ravioles de foie gras accompagnés de leur crème à la truffe</div>
-                <div>98€</div>
+                <div class="price">98€</div>
               </div>
               <div class="block__meals-line">
                 <div>Caviar osciètre sur blini à la farine de blé noir</div>
-                <div>115€</div>
+                <div class="price">115€</div>
               </div>
               <div class="block__meals-line">
                 <div>Homard et espuma de potiron mariné aux zests d'orange</div>
-                <div>89€</div>
+                <div class="price">89€</div>
               </div>
               <div class="block__meals-line">
                 <div>Foie gras de canard cuit entier, confiture de figue et pain toasté</div>
-                <div>105€</div>
+                <div class="price">105€</div>
               </div>
             </div>
           </section>
@@ -52,15 +52,15 @@
             <div class="block__meals">
               <div class="block__meals-line">
                 <div>Noix de coquilles Saint-Jacques sur lit de purée de céleri-rave</div>
-                <div>102€</div>
+                <div class="price">102€</div>
               </div>
               <div class="block__meals-line">
                 <div>Langoustine poêlée, purée de patate douce</div>
-                <div>205€</div>
+                <div class="price">205€</div>
               </div>
               <div class="block__meals-line">
                 <div>Mijoté de queue de boeuf et riz sauvage aux zests de citron</div>
-                <div>169€</div>
+                <div class="price">169€</div>
               </div>
             </div>
           </section>
