Création du fichier all.css pour autoprefixer

--- a/menus/la_note_enchantee.html
+++ b/menus/la_note_enchantee.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ohmyfood/menu La Note Enchantée</title>
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/all.css">
     <link rel="shortcut icon" type="image/png" href="../images/favicon_ocp3.png"/>
   </head>
 
