--- a/menus/le_chic_a_la_francaise.html
+++ b/menus/le_chic_a_la_francaise.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ohmyfood/menu Le Chic à la Française</title>
-    <link rel="stylesheet" href="../css/prefixed/style.css">
+    <link rel="stylesheet" href="../css/all.css">
     <link rel="shortcut icon" type="image/png" href="../images/favicon_ocp3.png"/>
   </head>
 
@@ -23,18 +23,18 @@
               <h4>Pour se mettre en appétit</h4>
               <img src="../images/trait_menu2_2.png" alt="" />
             </div>
-            <div class="block__meals-1">
-              <div class="block__meals-line">
+            <div class="block__meals-2">
+              <div class="block__meals-line-2">
                 <div>Tartare de poulpe acidulé aux zests d'orange</div>
-                <div>79€</div>
+                <div class="price-2">79€</div>
               </div>
-              <div class="block__meals-line">
+              <div class="block__meals-line-2">
                 <div>Velouté de Légumes d'antan</div>
-                <div>57€</div>
+                <div class="price-2">57€</div>
               </div>
-              <div class="block__meals-line">
+              <div class="block__meals-line-2">
                 <div>Soupe à l'oignon revisitée</div>
-                <div>57€</div>
+                <div class="price-2">57€</div>
               </div>
             </div>
           </section>
@@ -45,17 +45,17 @@
               <img src="../images/trait_menu2_4.png" alt="" />
             </div>
             <div class="block__meals-2-2">
-              <div class="block__meals-line">
+              <div class="block__meals-line-2">
                 <div>Coquilles Saint-Jacques accompagnées d'une purée de panais</div>
-                <div>95€</div>
+                <div class="price-2">95€</div>
               </div>
-              <div class="block__meals-line">
+              <div class="block__meals-line-2">
                 <div>Magret de canard et parmentier de pommes de terres</div>
-                <div>88€</div>
+                <div class="price-2">88€</div>
               </div>
-              <div class="block__meals-line">
+              <div class="block__meals-line-2">
                 <div>Pigeonneau d'Ille et Vilaine sur son lit de gnocchis aux légumes</div>
-                <div>175€</div>
+                <div class="price-2">175€</div>
               </div>
             </div>
           </section>
@@ -66,13 +66,13 @@
               <img src="../images/trait_menu2_6.png" alt="" />
             </div>
             <div class="block__meals-2-3">
-              <div class="block__meals-line">
+              <div class="block__meals-line-2">
                 <div>Pétales de violettes glacés et purée de noisettes</div>
               </div>
-              <div class="block__meals-line">
+              <div class="block__meals-line-2">
                 <div>Fondant au chocolat revisité</div>
               </div>
-              <div class="block__meals-line">
+              <div class="block__meals-line-2">
                 <div>Millefeuille croustillant</div>
               </div>
             </div>
