--- a/menus/le_delice_des_papilles.html
+++ b/menus/le_delice_des_papilles.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ohmyfood/menu Le Délice des Papilles</title>
-    <link rel="stylesheet" href="../css/prefixed/style.css">
+    <link rel="stylesheet" href="../css/all.css">
     <link rel="shortcut icon" type="image/png" href="../images/favicon_ocp3.png"/>
   </head>
   <body>
@@ -22,18 +22,18 @@
               <h4>Pour bien commencer</h4>
               <img src="../images/trait_menu3_2.png" alt="" />
             </div>
-            <div class="block__meals">
-              <div class="block__meals-line">
+            <div class="block__meals-3">
+              <div class="block__meals-line-3">
                 <div>Tartare de thon assaisonné au yuzu</div>
-                <div>55€</div>
+                <div class="price-3">55€</div>
               </div>
-              <div class="block__meals-line">
+              <div class="block__meals-line-3">
                 <div>Bouchée de homard croustillant et sa farandole de petits légumes</div>
-                <div>89€</div>
+                <div class="price-3">89€</div>
               </div>
-              <div class="block__meals-line">
+              <div class="block__meals-line-3">
                 <div>Velouté de cèpes aux truffes</div>
-                <div>56€</div>
+                <div class="price-3">56€</div>
               </div>
             </div>
           </section>
@@ -43,18 +43,18 @@
               <h4>Pour bien continuer</h4>
               <img src="../images/trait_menu3_4.png" alt="" />
             </div>
-            <div class="block__meals">
-              <div class="block__meals-line">
+            <div class="block__meals-3">
+              <div class="block__meals-line-3">
                 <div>Poulet rôti aux herbes de provence et sa crème de truffe</div>
-                <div>110€</div>
+                <div class="price-3">110€</div>
               </div>
-              <div class="block__meals-line">
+              <div class="block__meals-line-3">
                 <div>Langouste rôtie et ses légumes maison</div>
-                <div>225€</div>
+                <div class="price-3">225€</div>
               </div>
-              <div class="block__meals-line">
+              <div class="block__meals-line-3">
                 <div>Côte de boeuf angus et sa purée de panais</div>
-                <div>115€</div>
+                <div class="price-3">115€</div>
               </div>
             </div>
           </section>
@@ -64,18 +64,18 @@
               <h4>Pour bien terminer</h4>
               <img src="../images/trait_menu3_6.png" alt="" />
             </div>
-            <div class="block__meals">
-              <div class="block__meals-line">
+            <div class="block__meals-3">
+              <div class="block__meals-line-3">
                 <div>Farandole de dessert du chef</div>
-                <div>55€</div>
+                <div class="price-3">55€</div>
               </div>
-              <div class="block__meals-line">
+              <div class="block__meals-line-3">
                 <div>Crème brulée revisitée</div>
-                <div>60€</div>
+                <div class="price-3">60€</div>
               </div>
-              <div class="block__meals-line">
+              <div class="block__meals-line-3">
                 <div>Tiramisu à la noisette</div>
-                <div>55€</div>
+                <div class="price-3">55€</div>
               </div>
             </div>
           </section>
