--- a/menus/la_palette_du_gout.html
+++ b/menus/la_palette_du_gout.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ohmyfood/menu La Palette du Goût</title>
-    <link rel="stylesheet" href="../css/prefixed/style.css">
+    <link rel="stylesheet" href="../css/all.css">
     <link rel="shortcut icon" type="image/png" href="../images/favicon_ocp3.png"/>
   </head>
 
@@ -26,15 +26,15 @@
             <div class="block__meals">
               <div class="block__meals-line-4">
                 <div>Fricassée d'escargot au piment d'espelette</div>
-                <div>60€</div>
+                <div class="price-4">60€</div>
               </div>
               <div class="block__meals-line-4">
                 <div>Oeuf au plat assaisonné à la truffe sur lit de caviar</div>
-                <div>55€</div>
+                <div class="price-4">55€</div>
               </div>
               <div class="block__meals-line-4">
                 <div>Foie gras de canard mi-cuit et ses copeaux de truffe noire</div>
-                <div>65€</div>
+                <div class="price-4">65€</div>
               </div>
             </div>
           </section>
@@ -47,15 +47,15 @@
             <div class="block__meals">
               <div class="block__meals-line-4">
                 <div>Filet de boeuf aux herbes accompagné de sa ribambelle de légumes</div>
-                <div>70€</div>
+                <div class="price-4">70€</div>
               </div>
               <div class="block__meals-line-4">
                 <div>Parmentier de queue de boeuf à la truffe noire sur sa purée de panais</div>
-                <div>85€</div>
+                <div class="price-4">85€</div>
               </div>
               <div class="block__meals-line-4">
                 <div>Filet de Turbot aux agrumes</div>
-                <div>125€</div>
+                <div class="price-4">125€</div>
               </div>
             </div>
           </section>
@@ -68,15 +68,15 @@
             <div class="block__meals">
               <div class="block__meals-line-4">
                 <div>Paris-Brest revisité</div>
-                <div>55€</div>
+                <div class="price-4">55€</div>
               </div>
               <div class="block__meals-line-4">
                 <div>Macaron au chocolat d'exception et glace à la vanille de Madagascar</div>
-                <div>65€</div>
+                <div class="price-4">65€</div>
               </div>
               <div class="block__meals-line-4">
                 <div>Mousse au chocolat au piment d'espelette et à la truffe noire</div>
-                <div>60€</div>
+                <div class="price-4">60€</div>
               </div>
             </div>
           </section>
