--- a/menus/mentions_legales.html
+++ b/menus/mentions_legales.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mentions Légales</title>
-    <link rel="stylesheet" href="../css/prefixed/style.css">
+    <link rel="stylesheet" href="../css/all.css">
     <link rel="shortcut icon" type="image/png" href="../images/favicon_ocp3.png"/>
   </head>
 
