Mise en pages des pages menus sur mobile

--- a/menus/le_chic_a_la_francaise.html
+++ b/menus/le_chic_a_la_francaise.html
@@ -25,15 +25,15 @@
             </div>
             <div class="block__meals-2">
               <div class="block__meals-line-2">
-                <div>Tartare de poulpe acidulé aux zests d'orange</div>
+                <div class="plat">Tartare de poulpe acidulé aux zests d'orange</div>
                 <div class="price-2">79€</div>
               </div>
               <div class="block__meals-line-2">
-                <div>Velouté de Légumes d'antan</div>
+                <div class="plat">Velouté de Légumes d'antan</div>
                 <div class="price-2">57€</div>
               </div>
               <div class="block__meals-line-2">
-                <div>Soupe à l'oignon revisitée</div>
+                <div class="plat">Soupe à l'oignon revisitée</div>
                 <div class="price-2">57€</div>
               </div>
             </div>
