--- a/menus/la_palette_du_gout.html
+++ b/menus/la_palette_du_gout.html
@@ -23,7 +23,7 @@
               <h4>Esquisse</h4>
               <img src="../images/trait_menu4_2.png" alt="" />
             </div>
-            <div class="block__meals">
+            <div class="block__meals-4">
               <div class="block__meals-line-4">
                 <div>Fricassée d'escargot au piment d'espelette</div>
                 <div class="price-4">60€</div>
@@ -44,7 +44,7 @@
               <h4>Oeuvre de maitre</h4>
               <img src="../images/trait_menu4_2.png" alt="" />
             </div>
-            <div class="block__meals">
+            <div class="block__meals-4">
               <div class="block__meals-line-4">
                 <div>Filet de boeuf aux herbes accompagné de sa ribambelle de légumes</div>
                 <div class="price-4">70€</div>
@@ -65,7 +65,7 @@
               <h4>Au sommet de l'art</h4>
               <img src="../images/trait_menu4_2.png" alt="" />
             </div>
-            <div class="block__meals">
+            <div class="block__meals-4">
               <div class="block__meals-line-4">
                 <div>Paris-Brest revisité</div>
                 <div class="price-4">55€</div>
