Ajout des titres dans les pages menus + correction linear-gradient ppout validation w3c

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <main class="accueil">
       <div class="block">
         <div class="accueil-menu-1">
-          <a href="menus/la_note_enchantee.html"></section>
+          <a href="menus/la_note_enchantee.html">
             <div class="link">
               <img src="./images/note_small.png" alt=""/>
               <h2>La note enchantée</h2>
@@ -50,9 +50,9 @@
           </a>
         </div>
       </div>
-        <div class="btn">
-          <button class="prochainement">Prochainement <span class="dot1"> .</span><span class="dot2"> .</span><span class="dot3"> .</span></button>
-        </div>    
+        <form class="btn">
+            <button class="prochainement">Prochainement <span class="dot1"> .</span><span class="dot2"> .</span><span class="dot3"> .</span></button>
+        </form>    
     </main>
 
     <footer>
