--- a/menus/la_palette_du_gout.html
+++ b/menus/la_palette_du_gout.html
@@ -12,6 +12,10 @@
         <header>
             <a href="../index.html"><h1>ohmyfood</h1></a>
         </header>
+      
+        <div class="palette">
+          <h1>La palette du goût</h1>
+        </div>
 
         <main class="menu-4-4">
           <section class="section__header-4">
@@ -20,7 +24,7 @@
           <section>
             <div class="block__title-4-1">
               <img src="../images/trait_menu4_1.png" alt="" />
-              <h4>Esquisse</h4>
+              <h4 class="block_title-j">Esquisse</h4>
               <img src="../images/trait_menu4_2.png" alt="" />
             </div>
             <div class="block__meals-4">
@@ -41,7 +45,7 @@
           <section>
             <div class="block__title-4-2">
               <img src="../images/trait_menu4_1.png" alt="" />
-              <h4>Oeuvre de maitre</h4>
+              <h4 class="block__title-k">Oeuvre de maitre</h4>
               <img src="../images/trait_menu4_2.png" alt="" />
             </div>
             <div class="block__meals-4">
@@ -62,7 +66,7 @@
           <section>
             <div class="block__title-4-3">
               <img src="../images/trait_menu4_1.png" alt="" />
-              <h4>Au sommet de l'art</h4>
+              <h4 class="block__title-l">Au sommet de l'art</h4>
               <img src="../images/trait_menu4_2.png" alt="" />
             </div>
             <div class="block__meals-4">
