--- a/menus/la_note_enchantee.html
+++ b/menus/la_note_enchantee.html
@@ -13,6 +13,10 @@
             <a href="../index.html"><h1>ohmyfood</h1></a>
         </header>
 
+        <div class="note">
+          <h1>La note enchantée</h1>
+        </div>
+
         <main class="menu-1">
           <section class="section__header">
             <img class="note_entete" src="../images/note_small.png" alt=""/>
@@ -21,7 +25,7 @@
           <section>
             <div class="block__title-1">
               <img src="../images/trait_menu1_1.png" alt="" />
-              <h4>Prélude</h4>
+              <h4 class="block__title-a">Prélude</h4>
               <img src="../images/trait_menu1_2.png" alt="" />
             </div>
             <div class="block__meals">
@@ -46,7 +50,7 @@
           <section>
             <div class="block__title-2">
               <img src="../images/trait_menu1_1.png" alt="" />
-              <h4>Point d'orgue</h4>
+              <h4 class="block__title-b">Point d'orgue</h4>
               <img src="../images/trait_menu1_2.png" alt="" />
             </div>
             <div class="block__meals">
@@ -68,7 +72,7 @@
             <div class="block__title-3">
               <img src="../images/trait_menu1_1.png" alt="" />
               <div>
-                <h4>Mouvement final</h4>
+                <h4 class="block__title-c">Mouvement final</h4>
               </div>
               <img src="../images/trait_menu1_2.png" alt="" />
             </div>
