--- a/menus/le_chic_a_la_francaise.html
+++ b/menus/le_chic_a_la_francaise.html
@@ -13,6 +13,10 @@
           <a href="../index.html"><h1>ohmyfood</h1></a>
         </header>
 
+        <div class="chic">
+          <h1>Le délice des papilles</h1>
+        </div>
+
         <main class="menu-2-2">
           <section class="section__header-2">
             <h3>Le chic à la française</h3>
@@ -20,7 +24,7 @@
           <section>
             <div class="block__title-2-1">
               <img src="../images/trait_menu2_1.png" alt="" />
-              <h4>Pour se mettre en appétit</h4>
+              <h4 class="block__title-d">Pour se mettre en appétit</h4>
               <img src="../images/trait_menu2_2.png" alt="" />
             </div>
             <div class="block__meals-2">
@@ -41,7 +45,7 @@
           <section>
             <div class="block__title-2-2">
               <img src="../images/trait_menu2_3.png" alt="" />
-              <h4>Plaisir des papilles</h4>
+              <h4 class="block__title-e">Plaisir des papilles</h4>
               <img src="../images/trait_menu2_4.png" alt="" />
             </div>
             <div class="block__meals-2-2">
@@ -62,7 +66,7 @@
           <section>
             <div class="block__title-2-3">
               <img src="../images/trait_menu2_5.png" alt="" />
-              <h4>Gourmandises sucrées</h4>
+              <h4 class="block__title-f">Gourmandises sucrées</h4>
               <img src="../images/trait_menu2_6.png" alt="" />
             </div>
             <div class="block__meals-2-3">
