Amélioration de la sémantique des pages menus, priorité des titres h4 deveint h3 et h3 devient h2

--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
           </a>
         </div>
       </div>
-        <form class="btn">
-            <button class="prochainement">Prochainement <span class="dot1"> .</span><span class="dot2"> .</span><span class="dot3"> .</span></button>
-        </form>    
+        <a class="btn">
+          <span class="prochainement">Prochainement <span class="dot1"> .</span><span class="dot2"> .</span><span class="dot3"> .</span></span>
+        </a>    
     </main>
 
     <footer>
