--- a/menus/la_note_enchantee.html
+++ b/menus/la_note_enchantee.html
@@ -20,12 +20,12 @@
         <main class="menu-1">
           <section class="section__header">
             <img class="note_entete" src="../images/note_small.png" alt=""/>
-            <h3>La note enchantée</h3>
+            <h2 class="titre">La note enchantée</h2>
           </section>
           <section>
             <div class="block__title-1">
               <img src="../images/trait_menu1_1.png" alt="" />
-              <h4 class="block__title-a">Prélude</h4>
+              <h3 class="block__title-a">Prélude</h3>
               <img src="../images/trait_menu1_2.png" alt="" />
             </div>
             <div class="block__meals">
@@ -50,7 +50,7 @@
           <section>
             <div class="block__title-2">
               <img src="../images/trait_menu1_1.png" alt="" />
-              <h4 class="block__title-b">Point d'orgue</h4>
+              <h3 class="block__title-b">Point d'orgue</h3>
               <img src="../images/trait_menu1_2.png" alt="" />
             </div>
             <div class="block__meals">
@@ -72,7 +72,7 @@
             <div class="block__title-3">
               <img src="../images/trait_menu1_1.png" alt="" />
               <div>
-                <h4 class="block__title-c">Mouvement final</h4>
+                <h3 class="block__title-c">Mouvement final</h3>
               </div>
               <img src="../images/trait_menu1_2.png" alt="" />
             </div>
@@ -90,7 +90,7 @@
           </section>
           <section class="section__footer">
             <img class="note_basdepage" src="../images/note_verysmall.png" alt=""/>
-            <h3>La note enchantée</h3>
+            <h2 class="titre">La note enchantée</h2>
           </section>
         </main>
 
