Réduction de la taille de la typo des h1 des pages menus pour la version mobile

--- a/menus/le_chic_a_la_francaise.html
+++ b/menus/le_chic_a_la_francaise.html
@@ -14,7 +14,7 @@
         </header>
 
         <div class="chic">
-          <h1>Le délice des papilles</h1>
+          <h1>Le chic à la française</h1>
         </div> 
 
         <main class="menu-2-2">
